--- a/src/templates/blog.html
+++ b/src/templates/blog.html
@@ -1,24 +1,28 @@
 <div class="span8 blog-content">
-    <article>
-        <div class="article-head-and-content">
+    {% for post in posts %}
+        {% if post %}
+            <article>
+                <div class="article-head-and-content">
 
-            <div class="page-header">
-                <h1><a href="#">Hello World</a><br /><small>4 Eylul 2012</small></h1>
-            </div>
-            <div class="post_content">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus malesuada est a nibh vehicula at placerat erat faucibus. Nam et ligula mi. Integer fringilla mi ut eros tincidunt ac dictum tortor hendrerit. Integer tincidunt leo ac turpis blandit et sagittis tellus viverra. Vivamus non velit quam, vitae semper ante. Donec a elit metus, non mollis lorem. Integer ac augue dolor. Sed dignissim turpis sit amet ipsum elementum feugiat. Sed sed nisl enim. Maecenas lectus velit, lacinia nec consequat vel, tempus ac libero. Praesent id metus est, vitae hendrerit risus. Vivamus mollis malesuada diam eget condimentum. Aliquam eu est id lorem lacinia malesuada ac in ipsum. Mauris in ipsum et urna pretium lobortis viverra in leo. </p>
-            </div>
-            <hr />
-            <p class="muted post-info">
-            <p>Kategoriler : <a href="#" class="label label-info">Geek</a>&nbsp;<a href="#" class="label label-info">Halit Alptekin</a>&nbsp;<a href="#" class="label label-info">Python</a>&nbsp;</p>
-            <p>Etiketler : <a href="#" class="label label-info">python</a>&nbsp;<a href="#" class="label label-info">linux</a>&nbsp;<a href="#" class="label label-info">ubuntu</a>&nbsp;<a href="#" class="label label-info">programlama</a>&nbsp;</p>
-            </p>
-        </div>
-        <div class="well">
-            <a href="#" class="btn btn-info">Devamini Oku &#x2192;</a>&nbsp;
-            <a href="#" class="btn"><span class="dsq-postid" rel="#">Yorumlar</span></a>
-        </div>
-    </article>
+                    <div class="page-header">
+                        <h1><a href="#">{{ post.title }}</a><br /><small>{{ post.created }}</small></h1>
+                    </div>
+                    <div class="post_content">
+                        {{ post.content }}
+                    </div>
+                    <hr />
+                    <p class="muted post-info">
+                    <p>Kategoriler : {% for category in post.categories.all %}<a href="{{ category.get_absolute_url }}" class="label label-info">{{ category.title }}</a>&nbsp;{% endfor %}</p>
+                    <p>Etiketler : {% for tag in post.get_tags %}<a href="/blog/etiket/{{ tag }}/" class="label label-info">{{ tag }}</a>&nbsp;{% endfor %}</p>
+                    </p>
+                </div>
+                <div class="well">
+                    <a href="{{ post.get_absolute_url }}" class="btn btn-info">Devamini Oku &#x2192;</a>&nbsp;
+                    <a href="{{ post.get_absolute_url }}#disqus_thread" class="btn"><span class="dsq-postid" rel="#">Yorumlar</span></a>
+                </div>
+            </article>
+        {% endif %}
+    {% endfor %}
 
 
     <ul class="pager">
