--- a/src/templates/footer.html
+++ b/src/templates/footer.html
@@ -1,3 +1,5 @@
-<footer class="span8" style="height : 100px; text-align : center;">
-    <p><a href="#">Powered by <strong>PyTr</strong></a></p>
+<footer class="span12" style="height : 100px; text-align : center;">
+    <div class="well">
+        <p><a href="#">Powered by <strong>PyTr</strong></a></p>
+    </div>
 </footer>
