--- a/src/templates/navbar.html
+++ b/src/templates/navbar.html
@@ -6,7 +6,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </a>
-            <a class="brand" href="#">LBSRF</a>
+            <a class="brand" href="#">PyTr</a>
             <div class="nav-collapse">
                 <ul class="nav">
                     <li class="active"><a href="http://www.pytr.org">Anasayfa</a></li>
