--- a/src/templates/blog-post.html
+++ b/src/templates/blog-post.html
@@ -1,6 +1,39 @@
-{% block extrajs %}
-    <script src="{{ STATIC_URL }}js/jquery.min.js" type="text/javascript" charset="utf-8"></script>
-    <script src="{{ STATIC_URL }}js/bootstrap-collapse.js" type="text/javascript" charset="utf-8"></script>
-    <script src="{{ STATIC_URL }}js/bootstrap-dropdown.js" type="text/javascript" charset="utf-8"></script>
-    <script src="{{ STATIC_URL }}js/prettify.js" type="text/javascript" charset="utf-8"></script>
+{% extends "base.html" %}
+{% block blog %}
+    <div class="span8 blog-content">
+        <article>
+            <div class="article-head-and-content">
+
+                <div class="page-header">
+                    <h1><a href="{{ post.get_absolute_url }}">{{ post.sef_title }}</a><br /><small>{{ post.created }}</small></h1>
+                </div>
+                <div class="post_content">
+                    {{ post.content|safe }}
+                </div>
+                <hr />
+                <p class="muted post-info">
+                <p>Kategoriler : {% for category in post.categories.all %}<a href="{{ category.get_absolute_url }}" class="label label-info">{{ category.title }}</a>&nbsp;{% endfor %}</p>
+                <p>Etiketler : {% for tag in post.get_tags %}<a href="/blog/etiket/{{ tag }}/" class="label label-info">{{ tag }}</a>&nbsp;{% endfor %}</p>
+                </p>
+            </div>
+            <div class="well">
+                <a href="{{ post.get_absolute_url }}#disqus_thread" class="btn"><span class="dsq-postid">Yorum Yap</span></a>
+            </div>
+        </article>
+        <div class="well">
+            <div id="disqus_thread"></div>
+            <script type="text/javascript">
+                /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
+                var disqus_shortname = 'halitalptekin'; // required: replace example with your forum shortname
+                /* * * DON'T EDIT BELOW THIS LINE * * */
+                (function() {
+                    var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+                    dsq.src = 'http://' + disqus_shortname + '.disqus.com/embed.js';
+                    (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+                })();
+            </script>
+            <noscript>Lutfen Javascripti Etkinlestiriniz <a href="http://disqus.com/?ref_noscript">Disqus</a></noscript>
+            <a href="http://disqus.com" class="dsq-brlink">Tesekkurler  <span class="logo-disqus">Disqus</span></a>
+        </div>
+    </div>
 {% endblock %}
