--- a/src/templates/blog.html
+++ b/src/templates/blog.html
@@ -1,6 +1,6 @@
 <div class="span8 blog-content">
     {% load pagination_tags %}
-    {% autopaginate posts 1 %}
+    {% autopaginate posts 5 %}
     {% for post in posts %}
         {% if post %}
             <article>
@@ -28,3 +28,9 @@
     {% paginate %}
 
 </div>
+{% block extrajs %}
+    <script src="{{ STATIC_URL }}js/jquery.min.js" type="text/javascript" charset="utf-8"></script>
+    <script src="{{ STATIC_URL }}js/bootstrap-collapse.js" type="text/javascript" charset="utf-8"></script>
+    <script src="{{ STATIC_URL }}js/bootstrap-dropdown.js" type="text/javascript" charset="utf-8"></script>
+    <script src="{{ STATIC_URL }}js/prettify.js" type="text/javascript" charset="utf-8"></script>
+{% endblock %}
