--- a/src/templates/navbar.html
+++ b/src/templates/navbar.html
@@ -9,9 +9,10 @@
             <a class="brand" href="#">PyTr</a>
             <div class="nav-collapse">
                 <ul class="nav">
-                    <li class="active"><a href="http://www.pytr.org">Anasayfa</a></li>
+                    <li><a href="{{ site.domain }}">Anasayfa</a></li>
+                    <li><a href="{{ site.domain }}/blog/">Blog</a></li>
                 </ul>
-                <form class="navbar-search pull-right"  method="get"action="http://www.pytr.org" >
+                <form class="navbar-search pull-right"  method="get"action="{{ site.domain }}" >
                     <input type="text" class="search-query span2" placeholder="Arama" name="s" id="s">
                 </form>
             </div><!-- /.nav-collapse -->
