--- a/src/templates/blog-post.html
+++ b/src/templates/blog-post.html
@@ -37,3 +37,10 @@
         </div>
     </div>
 {% endblock %}
+
+{% block extrajs %}
+    <script src="{{ STATIC_URL }}js/jquery.min.js" type="text/javascript" charset="utf-8"></script>
+    <script src="{{ STATIC_URL }}js/bootstrap-collapse.js" type="text/javascript" charset="utf-8"></script>
+    <script src="{{ STATIC_URL }}js/bootstrap-dropdown.js" type="text/javascript" charset="utf-8"></script>
+    <script src="{{ STATIC_URL }}js/prettify.js" type="text/javascript" charset="utf-8"></script>
+{% endblock %}
