--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html lang="tr-TR">
 <head>
-    <title>{% block title %}Python Turkiye{% endblock %} - {{ site.name }}</title>
+    <title>{% block title %}Python Turkiye Blog{% endblock %} - {{ site.name }}</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
