--- a/src/templates/blog-category.html
+++ b/src/templates/blog-category.html
@@ -1,4 +1,9 @@
 {% extends "base.html" %}
+{% block title %}{{ category.title }}{% endblock %}
+{% block metas %}
+    <meta name="keywords" content="python, python türkiye, pytr, python dersleri, python programlama" />
+    <meta name="description" content="Python Türkiye - {{ category.sef_description }}" />
+{% endblock %}
 {% block blog %}
     <div class="span8 blog-content">
         {% load pagination_tags %}
