--- a/src/templates/footer.html
+++ b/src/templates/footer.html
@@ -1,5 +1,5 @@
 <footer class="span12" style="height : 100px; text-align : center;">
     <div class="well">
-        <p><a href="#">Powered by <strong>PyTr</strong></a></p>
+        <p><a href="https://github.com/halitalptekin/PyTr">Powered by <strong>PyTr</strong></a></p>
     </div>
 </footer>
