--- a/src/templates/sidebar.html
+++ b/src/templates/sidebar.html
@@ -3,11 +3,12 @@
         <aside>
             <div class="well">
                 <h3>Hoşgeldiniz !</h3>
-                <p>Sitemizin altyapı özellikleri aşağıdaki gibidir.</p>
-                <p>Front-End   : <strong>Bootstrap</strong></p>
-                <p>Back-End    : <strong>Django</strong></p>
-                <p>Server-Side : <strong>Nginx</strong> ve <strong>Uwsgi</strong></p>
-                <p>Database    : <strong>PostgreSQL</strong> ve <strong>MongoDB</strong></p>
+                <p>Python Türkiye web sitesinin kaynak kodlarına <a href="https://github.com/halitalptekin/PyTr">buradan</a> ulaşabilirsiniz.</p>
+                <p>Sitemiz kısa süreliğine heroku serverlarında barınacaktır.İlginiz için teşekkürler.</p>
+                <p class="social-networks">
+                    <a href="{{ site.url }}/rss"></a>
+                    <a href="{{ site.url }}/sitemap.xml"></a>
+                </p>
             </div>
         </aside>
         <aside>
