--- a/src/templates/navbar.html
+++ b/src/templates/navbar.html
@@ -9,8 +9,8 @@
             <a class="brand" href="#">PyTr</a>
             <div class="nav-collapse">
                 <ul class="nav">
-                    <li><a href="{{ site.domain }}">Anasayfa</a></li>
-                    <li><a href="{{ site.domain }}/blog/">Blog</a></li>
+                    <li><a href="/">Anasayfa</a></li>
+                    <li><a href="/blog/">Blog</a></li>
                 </ul>
                 <form class="navbar-search pull-right"  method="get"action="{{ site.domain }}" >
                     <input type="text" class="search-query span2" placeholder="Arama" name="s" id="s">
