--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -24,7 +24,7 @@ kitap, Django, Spyder, Django nedir, tkinter, py, *.py, pyton, pytr" />
 </head>
 <body>
 <div class="container">
-    <a href="{{ site.domain }}" id="logo"><img src="{{ STATIC_URL }}img/logo.png" alt="Logo"></a>
+    <a href="/" id="logo"><img src="{{ STATIC_URL }}img/logo.png" alt="Logo"></a>
     {% include "navbar.html" %}
     <div class="row"><div class="clearfix-header-content visible-phone"></div>
         {% block blog %}{% endblock %}
