--- a/src/templates/blog-post.html
+++ b/src/templates/blog-post.html
@@ -11,7 +11,11 @@
             <div class="article-head-and-content">
 
                 <div class="page-header">
-                    <h1><a href="{{ post.get_absolute_url }}">{{ post.sef_title }}</a><br /><small>{{ post.created }}</small></h1>
+                    <h1>
+                        <a href="{{ post.get_absolute_url }}">{{ post.sef_title }}</a>
+                        <br />
+                        <small>{{ post.created }}</small>
+                    </h1>
                 </div>
                 <div class="post_content">
                     {{ post.content|safe }}
@@ -20,10 +24,22 @@
                 <p class="muted post-info">
                 <p>Kategoriler : {% for category in post.categories.all %}<a href="{{ category.get_absolute_url }}" class="label label-info">{{ category.title }}</a>&nbsp;{% endfor %}</p>
                 <p>Etiketler : {% for tag in post.get_tags %}<a href="/blog/etiket/{{ tag }}/" class="label label-info">{{ tag }}</a>&nbsp;{% endfor %}</p>
-                </p>
             </div>
             <div class="well">
-                <a href="{{ post.get_absolute_url }}#disqus_thread" class="btn"><span class="dsq-postid">Yorum Yap</span></a>
+                <!-- AddThis Button BEGIN -->
+                <div class="addthis_toolbox addthis_default_style addthis_32x32_style">
+                    <a class="addthis_button_preferred_1"></a>
+                    <a class="addthis_button_preferred_2"></a>
+                    <a class="addthis_button_preferred_3"></a>
+                    <a class="addthis_button_preferred_4"></a>
+                    <a class="addthis_button_preferred_5"></a>
+                    <a class="addthis_button_preferred_6"></a>
+                    <a class="addthis_button_preferred_7"></a>
+                    <a class="addthis_button_preferred_8"></a>
+                    <a class="addthis_button_preferred_9"></a>
+                    <a class="addthis_button_preferred_10"></a>
+                    <a class="addthis_counter addthis_bubble_style"></a>
+                </div>
             </div>
         </article>
         <div class="well">
@@ -48,5 +64,6 @@
     <script src="{{ STATIC_URL }}js/jquery.min.js" type="text/javascript" charset="utf-8"></script>
     <script src="{{ STATIC_URL }}js/bootstrap-collapse.js" type="text/javascript" charset="utf-8"></script>
     <script src="{{ STATIC_URL }}js/bootstrap-dropdown.js" type="text/javascript" charset="utf-8"></script>
-    <script src="{{ STATIC_URL }}prettify/prettify.js" type="text/javascript" charset="utf-8"></script>
+    <script type="text/javascript">var addthis_config = {"data_track_addressbar":true};</script>
+    <script type="text/javascript" src="http://s7.addthis.com/js/250/addthis_widget.js#pubid=ra-504c6d593daec57a"></script>
 {% endblock %}
