--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -1,2 +1,3 @@
 {% extends "base.html" %}
-{% block blog %} {% include "blog.html" %} {% endblock %}
+{% block blog %} {% include "blog/blog.html" %} {% endblock %}
+{% block sidebar %} {% include "blog/sidebar.html" %} {% endblock %}
