--- a/src/templates/blog/blog-tag.html
+++ b/src/templates/blog/blog-tag.html
@@ -1,14 +1,9 @@
 {% extends "base.html" %}
-{% block title %}{{ category.title }}{% endblock %}
-{% block metas %}
-    <meta name="keywords" content="python, python türkiye, pytr, python dersleri, python programlama" />
-    <meta name="description" content="Python Türkiye - {{ category.sef_description }}" />
-{% endblock %}
 {% block blog %}
     <div class="span8 blog-content">
         {% load pagination_tags %}
         {% autopaginate posts 5 %}
-        {% for post in posts %}
+        {% for post in post %}
             {% if post %}
                 <article>
                     <div class="article-head-and-content">
@@ -36,3 +31,4 @@
 
     </div>
 {% endblock %}
+{% block sidebar %} {% include "blog/sidebar.html" %} {% endblock %}
