--- a/src/templates/sources/sidebar.html
+++ b/src/templates/sources/sidebar.html
@@ -11,11 +11,11 @@
         </aside>
         <aside>
             <div class="well">
-                <h3>Son Yazilar</h3>
-                {% for post in posts %}
+                <h3>Son Kaynaklar</h3>
+                {% for source in sources %}
                     <ul>
-                        {% if post %}
-                            <li class="cat-item cat-item-53"><a href="{{ post.get_absolute_url }}" title="{{ post.sef_title }}">{{ post.title }}</a></li>
+                        {% if source %}
+                            <li class="cat-item cat-item-53"><a href="{{ source.get_absolute_url }}" title="{{ source.sef_title }}">{{ source.title }}</a></li>
                         {% endif %}
                     </ul>
                 {% endfor %}
@@ -28,18 +28,6 @@
                     {% if category %}
                         <ul>
                             <li class="cat-item cat-item-53"><a href="{{ category.get_absolute_url }}" title="{{ category.sef_title }}">{{ category.title }}</a> </li>
-                        </ul>
-                    {% endif %}
-                {% endfor %}
-            </div>
-        </aside>
-        <aside>
-            <div class="well">
-                <h3>Etiketler</h3>
-                {% for tag in post.get_tags %}
-                    {% if tag %}
-                        <ul>
-                            <li><a href="/blog/etiket/{{ tag }}/" title="{{ tag }}">{{ tag }}</a></li>
                         </ul>
                     {% endif %}
                 {% endfor %}
