--- a/src/templates/blog/sidebar.html
+++ b/src/templates/blog/sidebar.html
@@ -11,11 +11,35 @@
         </aside>
         <aside>
             <div class="well">
-                <h3>Son Yazilar</h3>
-                {% for post in posts %}
+                <h3>Kaynak Kategorileri</h3>
+                {% for category in sources_cat %}
+                    {% if category %}
+                        <ul>
+                            <li class="cat-item cat-item-53"><a href="{{ category.get_absolute_url }}" title="{{ category.sef_title }}">{{ category.title }}</a> </li>
+                        </ul>
+                    {% endif %}
+                {% endfor %}
+            </div>
+        </aside>
+        <aside>
+            <div class="well">
+                <h3>Blog Kategorileri</h3>
+                {% for category in categories %}
+                    {% if category %}
+                        <ul>
+                            <li class="cat-item cat-item-53"><a href="{{ category.get_absolute_url }}" title="{{ category.sef_title }}">{{ category.title }}</a> </li>
+                        </ul>
+                    {% endif %}
+                {% endfor %}
+            </div>
+        </aside>
+        <aside>
+            <div class="well">
+                <h3>Son Kaynaklar</h3>
+                {% for source in sources %}
                     <ul>
-                        {% if post %}
-                            <li class="cat-item cat-item-53"><a href="{{ post.get_absolute_url }}" title="{{ post.sef_title }}">{{ post.title }}</a></li>
+                        {% if source %}
+                            <li class="cat-item cat-item-53"><a href="{{ source.get_absolute_url }}" title="{{ source.sef_title }}">{{ source.title }}</a></li>
                         {% endif %}
                     </ul>
                 {% endfor %}
@@ -23,13 +47,13 @@
         </aside>
         <aside>
             <div class="well">
-                <h3>Kategoriler</h3>
-                {% for category in categories %}
-                    {% if category %}
-                        <ul>
-                            <li class="cat-item cat-item-53"><a href="{{ category.get_absolute_url }}" title="{{ category.sef_title }}">{{ category.title }}</a> </li>
-                        </ul>
-                    {% endif %}
+                <h3>Son Blog Yazilari</h3>
+                {% for post in posts %}
+                    <ul>
+                        {% if post %}
+                            <li class="cat-item cat-item-53"><a href="{{ post.get_absolute_url }}" title="{{ post.sef_title }}">{{ post.title }}</a></li>
+                        {% endif %}
+                    </ul>
                 {% endfor %}
             </div>
         </aside>
