--- a/src/templates/navbar.html
+++ b/src/templates/navbar.html
@@ -11,6 +11,7 @@
                 <ul class="nav">
                     <li><a href="/">Anasayfa</a></li>
                     <li><a href="/blog/">Blog</a></li>
+                    <li><a href="/kaynak/">Kaynaklar</a></li>
                 </ul>
                 <form class="navbar-search pull-right"  method="get"action="{{ site.domain }}" >
                     <input type="text" class="search-query span2" placeholder="Arama" name="s" id="s">
