Source App Rss and Sitemap

--- a/src/templates/sources/sidebar-with-tags.html
+++ b/src/templates/sources/sidebar-with-tags.html
@@ -5,9 +5,7 @@
                 <h3>Hoşgeldiniz !</h3>
                 <p>Python Türkiye web sitesinin kaynak kodlarına <a href="https://github.com/halitalptekin/PyTr">buradan</a> ulaşabilirsiniz.</p>
                 <p>Sitemiz kısa süreliğine heroku serverlarında barınacaktır.İlginiz için teşekkürler.</p>
-                <p><a href="/rss"><span class="label label-warning">RSS</span></a> <a href="/sitemap.xml"><span class="label label-info">Sitemap</span></a></p>
-
-            </div>
+                <p><a href="/rss"><span class="label label-warning">Blog RSS</span></a> <a href="/rss/sources"><span class="label label-warning">Kaynak RSS</span></a> <a href="/sitemap.xml"><span class="label label-info">Blog Sitemap</span></a> <a href="/sitemap-sources.xml"><span class="label label-info">Kaynaklar Sitemap</span></a></p>            </div>
         </aside>
         <aside>
             <div class="well">
