URL Shortener Added

--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -21,6 +21,20 @@ kitap, Django, Spyder, Django nedir, tkinter, py, *.py, pyton, pytr" />
     <link rel="apple-touch-icon-precomposed" href="{{ STATIC_URL }}img/"/>
     <link rel="shortcut icon" href="{{ STATIC_URL }}img/">
     {% block extracss %} {% endblock %}
+    <script type="text/javascript">
+
+	  var _gaq = _gaq || [];
+	  _gaq.push(['_setAccount', 'UA-34655973-1']);
+	  _gaq.push(['_setDomainName', 'pytr.org']);
+	  _gaq.push(['_trackPageview']);
+
+	  (function() {
+		var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+		ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+		var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+	  })();
+
+	</script>
 </head>
 <body>
 <div class="container">
