Little Template Changes

--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -36,7 +36,7 @@ kitap, Django, Spyder, Django nedir, tkinter, py, *.py, pyton, pytr" />
 
 	</script>
 </head>
-<body>
+<body onload="prettyPrint(); adjustHeightInParent()">
 <div class="container">
     <a href="/" id="logo"><img src="{{ STATIC_URL }}img/logo.png" alt="Logo"></a>
     {% include "navbar.html" %}
