--- a/src/templates/blog/blog-post.html
+++ b/src/templates/blog/blog-post.html
@@ -37,9 +37,9 @@
                     <a class="addthis_button_preferred_7"></a>
                     <a class="addthis_button_preferred_8"></a>
                     <a class="addthis_button_preferred_9"></a>
-                    <a class="addthis_button_preferred_10"></a>
                     <a class="addthis_counter addthis_bubble_style"></a>
                 </div>
+                <script type="text/javascript" src="http://s7.addthis.com/js/250/addthis_widget.js#pubid=ra-504c6d593daec57a"></script>
             </div>
         </article>
         <div class="well">
@@ -64,6 +64,7 @@
     <script src="{{ STATIC_URL }}js/jquery.min.js" type="text/javascript" charset="utf-8"></script>
     <script src="{{ STATIC_URL }}js/bootstrap-collapse.js" type="text/javascript" charset="utf-8"></script>
     <script src="{{ STATIC_URL }}js/bootstrap-dropdown.js" type="text/javascript" charset="utf-8"></script>
+    <script src="{{ STATIC_URL }}prettify/prettify.js" type="text/javascript" charset="utf-8"></script>
     <script type="text/javascript">var addthis_config = {"data_track_addressbar":true};</script>
     <script type="text/javascript" src="http://s7.addthis.com/js/250/addthis_widget.js#pubid=ra-504c6d593daec57a"></script>
 {% endblock %}
