--- a/src/templates/sources/sources-post.html
+++ b/src/templates/sources/sources-post.html
@@ -33,6 +33,7 @@
                 <a class="addthis_button_preferred_10"></a>
                 <a class="addthis_counter addthis_bubble_style"></a>
             </div>
+            <script type="text/javascript" src="http://s7.addthis.com/js/250/addthis_widget.js#pubid=ra-504c6d593daec57a"></script>
         </div>
         <div class="well">
             <div id="disqus_thread"></div>
