--- a/src/templates/blog/blog.html
+++ b/src/templates/blog/blog.html
@@ -32,5 +32,5 @@
     <script src="{{ STATIC_URL }}js/jquery.min.js" type="text/javascript" charset="utf-8"></script>
     <script src="{{ STATIC_URL }}js/bootstrap-collapse.js" type="text/javascript" charset="utf-8"></script>
     <script src="{{ STATIC_URL }}js/bootstrap-dropdown.js" type="text/javascript" charset="utf-8"></script>
-    <script src="{{ STATIC_URL }}js/prettify.js" type="text/javascript" charset="utf-8"></script>
+    <script src="{{ STATIC_URL }}prettify/prettify.js" type="text/javascript" charset="utf-8"></script>
 {% endblock %}
